@startuml
class Square {
+ <<Create>> Square()
+ <<Create>> Square(double)
+ <<Create>> Square(double,String,boolean)
+ double getSide()
+ void setSide(double)
+ void setWidth(double)
+ void setLenght(double)
+ String toString()
}
class Circle {
# double radius
+ <<Create>> Circle()
+ <<Create>> Circle(double,String,boolean)
+ <<Create>> Circle(double)
+ double getRadius()
+ void setRadius(double)
+ double getArea()
+ double getPerimeter()
+ String toString()
}
abstract class Shape {
+ String color
+ boolean filled
+ <<Create>> Shape()
+ <<Create>> Shape(String,boolean)
+ String getColor()
+ void setColor(String)
+ boolean isFilled()
+ void setFilled(boolean)
+ {abstract}double getArea()
+ {abstract}double getPerimeter()
+ String toString()
}
class Main {
+ {static} void main(String[])
}
class Rectangle {
# double width
# double lenght
+ <<Create>> Rectangle()
+ <<Create>> Rectangle(double,double)
+ <<Create>> Rectangle(double,double,String,boolean)
+ double getWidth()
+ void setWidth(double)
+ double getLenght()
+ void setLenght(double)
+ double getArea()
+ double getPerimeter()
+ String toString()
}


Rectangle <|-- Square
Shape <|-- Circle
Shape <|-- Rectangle
@enduml